# vault-semantic-search

./: .coverage  .gitignore  README.md  dev-notes.md  main.py  pyproject.toml
src/: main.py
src/vsearch/: chunker.py  cli.py  config.py  embeddings.py  indexer.py  logic.py  search.py  store.py
tests/: conftest.py  test_chunker.py  test_embeddings.py  test_indexer.py  test_search.py  test_store.py
tests/fixtures/sample_vault/: flat-note.md  goals.md  rich-headers.md  unrelated.md
tests/fixtures/sample_vault/daily/: 2026-03-15.md
